src/ui/components/Dashboard/RecordingItem/RecordingListItem.css
.recording-list.list {
  overflow: auto;
  height: 100%;
}

.recording-list.list table.dashboard-viewer-content-table {
  display: grid;
  grid-template-columns: auto 140px 2fr 2fr 0.5fr 0.5fr 0.5fr auto auto;
}

/* Table Body styling */

.recording-list.list tbody.dashboard-viewer-content-body,
.recording-list.list tbody.dashboard-viewer-content-body tr {
  display: contents;
}

.recording-list.list tbody.dashboard-viewer-content-body td {
  display: flex;
  align-items: center;
  padding: 20px;
  border-bottom: 1px solid var(--theme-splitter-color);
  transition: background 200ms;
}

.recording-list.list .recording-item:hover td {
  background: var(--theme-toolbarbutton-hover-background);
}

.recording-list.list tbody.dashboard-viewer-content-body td:first-child {
  padding-left: 40px;
}

.recording-list.list tbody.dashboard-viewer-content-body td:last-child {
  padding-right: 40px;
}

/* Table Header styling */

.recording-list.list thead.dashboard-viewer-content-header {
  display: contents;
  font-size: 1rem;
  font-weight: 700;
  color: var(--theme-text-color-inactive);
}

.recording-list.list thead.dashboard-viewer-content-header tr {
  display: contents;
}

.recording-list.list thead.dashboard-viewer-content-header th {
  display: flex;
  align-items: center;
  padding: 20px;
  border-bottom: 1px solid var(--theme-splitter-color);
  position: sticky;
  top: 0px;
  background: white;
}

.recording-list.list thead.dashboard-viewer-content-header .img {
  background: var(--theme-text-color-inactive);
}

.recording-list.list thead.dashboard-viewer-content-header .sorter {
  cursor: pointer;
}

.recording-list.list thead.dashboard-viewer-content-header .sorter.label {
  margin-right: 2px;
}

.recording-list.list thead.dashboard-viewer-content-header .sorter:hover .label {
  color: var(--theme-text-color-alt);
}

.recording-list.list thead.dashboard-viewer-content-header .sorter:hover .img {
  background: var(--theme-text-color-alt);
}

/* Recording Item styling */

.recording-list.list .recording-item {
  font-size: 14px;
  color: var(--theme-body-color);
  cursor: pointer;
}

.recording-list.list .recording-item.selected:hover {
  background: hsl(201, 80%, 90%);
}

.recording-list.list .recording-item .screenshot {
  background: var(--theme-toolbar-background);
  height: 100%;
}

.recording-list.list .recording-item.selected {
  background: hsl(201, 88%, 95%);
  border-bottom: 1px solid hsl(201, 88%, 95%);
}

.recording-list.list .recording-item .screenshot img {
  width: 100%;
  object-fit: contain;
  height: 60px;
}

.recording-list.list .recording-item .page,
.recording-list.list .recording-item .item-title {
  display: grid;
  gap: 8px;
}

.recording-list.list .recording-item .page > *,
.recording-list.list .recording-item .item-title > * {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.recording-list.list .recording-item .page > :not(:first-child),
.recording-list.list .recording-item .item-title > :not(:first-child) {
  color: var(--theme-text-color-inactive);
}

.recording-list.list .recording-item.selected .page > :not(:first-child),
.recording-list.list .recording-item.selected .item-title > :not(:first-child) {
  color: var(--theme-text-color-alt);
}

.recording-list.list > * input[type="checkbox"] {
  visibility: hidden;
}

.editing .recording-list.list > * input[type="checkbox"] {
  visibility: visible;
}

.recording-list.list .recording-item .item-title-label {
  display: flex;
  flex-direction: row;
}

.recording-list.list .recording-item .item-title-label .title {
  line-height: 20px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.recording-list.list .recording-item .item-title-label-actions button {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 2px 8px 2px 6px;
  border-radius: 4px;
  font-size: 1rem;
  margin-left: 8px;
  visibility: hidden;
  color: var(--dark-blue);
  cursor: pointer;
}

.recording-list.list .recording-item .item-title-label-actions button .img {
  background: var(--dark-blue);
  margin-right: 4px;
}

.recording-list.list .recording-item:hover .item-title-label-actions button,
.recording-list.list .recording-item .item-title-label-actions button.clicked {
  visibility: visible;
}

.recording-list.list .recording-item .item-title-label-actions button:hover,
.recording-list.list .recording-item .item-title-label-actions button.clicked {
  background: var(--dark-blue);
  color: white;
}

.recording-list.list .recording-item .item-title-label-actions button:hover .img,
.recording-list.list .recording-item .item-title-label-actions button.clicked .img {
  background: white;
}

.recording-list.list .recording-item .owner {
  justify-self: center;
}

.recording-list.list .recording-item .owner img {
  margin-right: 0px;
}

.recording-list.list .recording-item .more button {
  cursor: pointer;
  padding: 4px;
  border-radius: 4px;
  visibility: hidden;
  height: auto;
}

.recording-list.list .recording-item .dropdown-block {
  height: auto;
}

.recording-list.list .recording-item .more button {
  cursor: pointer;
  padding: 4px;
  border-radius: 4px;
  visibility: hidden;
  height: auto;
}

:not(.editing) .recording-list.list .recording-item:hover .more button {
  visibility: visible;
}

.recording-list.list .recording-item:hover .more button:hover {
  background: var(--theme-toolbarbutton-checked-hover-background);
}

.recording-list.list .recording-item .more .img {
  background: var(--theme-body-color);
  margin: auto;
}

